--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.12)
-project(clog VERSION 0.0.0.0)
+project(slog VERSION 0.0.0.0)
 
 add_subdirectory(src)
 add_subdirectory(test)
