--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,6 @@ find_package(Threads REQUIRED)
 
 file(GLOB source CONFIGURE_DEPENDS *.cpp)
 
-add_library(clog STATIC ${source} )
-target_link_libraries(clog PUBLIC Threads::Threads)
-target_include_directories(clog PUBLIC ${CMAKE_CURRENT_LIST_DIR})
+add_library(slog STATIC ${source} )
+target_link_libraries(slog PUBLIC Threads::Threads atomic)
+target_include_directories(slog PUBLIC ${CMAKE_CURRENT_LIST_DIR})
