--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 file(GLOB source CONFIGURE_DEPENDS *.cpp)
 
-add_executable(clogTest ${source})
-target_link_libraries(clogTest PUBLIC clog)
+add_executable(slogTest ${source})
+target_link_libraries(slogTest PUBLIC slog)
 
