--- a/src/LogConfig.hpp.in
+++ b/src/LogConfig.hpp.in
@@ -1,25 +1,18 @@
 #pragma once
 
-#ifndef SLOG_MAX_CHANNEL
-#define SLOG_MAX_CHANNEL 4
-#endif
+#define SLOG_MAX_CHANNEL @SLOG_MAX_CHANNEL@
 
 #ifndef SLOG_LOGGING_ENABLED
 #define SLOG_LOGGING_ENABLED 1
 #endif
 
-#ifndef SLOG_MESSAGE_SIZE
-#define SLOG_MESSAGE_SIZE 1024
-#endif
+#define SLOG_MESSAGE_SIZE @SLOG_MESSAGE_SIZE@
 
-#ifndef SLOG_POOL_SIZE
-#define SLOG_POOL_SIZE 1048576
-#endif
+#define SLOG_POOL_SIZE @SLOG_POOL_SIZE@
 
+#cmakedefine01 SLOG_ALWAYS_LOG
 
-#define SLOG_DUMP_TO_CONSOLE_WHEN_STOPPED
-
-// #define SLOG_LOCK_FREE
+#cmakedefine01 SLOG_LOCK_FREE_POOL
 
 namespace slog
 {
