Adjust pool policies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,14 @@ project(slog VERSION 0.1.0.0)
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 option(SLOG_ALWAYS_LOG "When slog is stopped, write all messages to the console" OFF)
-option(SLOG_LOCK_FREE_POOL "[EXPERIMENTAL] Use the lock free message pool" OFF)
-option(SLOG_POOL_BLOCKS_WHEN_EMPTY "When the pool of available message is empty, block logging until available" ON)
-set(SLOG_MAX_CHANNEL 4 CACHE STRING "Total number of log channels to provide")
+set(SLOG_POOL_POLICY "SLOG_EMPTY_POOL_ALLOCATES" CACHE STRING 
+"Behavior when the pool is empty: one of SLOG_EMPTY_POOL_ALLOCATES, SLOG_EMPTY_POOL_DISCARDS, SLOG_EMPTY_POOL_BLOCKS")
+set(SLOG_MAX_CHANNEL 1 CACHE STRING "Total number of log channels to provide")
 set(SLOG_MESSAGE_SIZE 1024 CACHE STRING "Maximum size in bytes of a log message")
 set(SLOG_POOL_SIZE 1048576 CACHE STRING "Bytes allocated per channel")
+
+# TODO sanity check options
+
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 
 if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
