--- a/src/LogConfig.hpp.in
+++ b/src/LogConfig.hpp.in
@@ -12,9 +12,11 @@
 
 #cmakedefine01 SLOG_ALWAYS_LOG
 
-#cmakedefine01 SLOG_LOCK_FREE_POOL
+#define SLOG_EMPTY_POOL_DISCARDS 0 
+#define SLOG_EMPTY_POOL_BLOCKS 1
+#define SLOG_EMPTY_POOL_ALLOCATES 2
 
-#cmakedefine01 SLOG_POOL_BLOCKS_WHEN_EMPTY
+#define SLOG_POOL_POLICY @SLOG_POOL_POLICY@
 
 namespace slog
 {
