--- a/src/LogConfig.hpp.in
+++ b/src/LogConfig.hpp.in
@@ -16,6 +16,8 @@
 #define SLOG_EMPTY_POOL_BLOCKS 1
 #define SLOG_EMPTY_POOL_ALLOCATES 2
 
+#define SLOG_MAX_BLOCK_TIME_MS @SLOG_MAX_BLOCK_TIME_MS@
+
 #define SLOG_POOL_POLICY @SLOG_POOL_POLICY@
 
 namespace slog
