--- a/src/LogConfig.hpp.in
+++ b/src/LogConfig.hpp.in
@@ -6,19 +6,7 @@
 #define SLOG_LOGGING_ENABLED 1
 #endif
 
-#define SLOG_MESSAGE_SIZE @SLOG_MESSAGE_SIZE@
-
-#define SLOG_POOL_SIZE @SLOG_POOL_SIZE@
-
-#cmakedefine01 SLOG_ALWAYS_LOG
-
-#define SLOG_EMPTY_POOL_DISCARDS 0 
-#define SLOG_EMPTY_POOL_BLOCKS 1
-#define SLOG_EMPTY_POOL_ALLOCATES 2
-
-#define SLOG_MAX_BLOCK_TIME_MS @SLOG_MAX_BLOCK_TIME_MS@
-
-#define SLOG_POOL_POLICY @SLOG_POOL_POLICY@
+#cmakedefine01 SLOG_LOG_TO_CONSOLE_WHEN_STOPPED
 
 namespace slog
 {
