Rationalize jumbo message feature

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ project(slog VERSION 0.1.0.0)
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 option(SLOG_LOG_TO_CONSOLE_WHEN_STOPPED "When slog is stopped, write all messages to the console" OFF)
+option(SLOG_STREAM "Provide Slog() macros and include <iostream>" ON)
+
+add_compile_options(-pg)
 
 add_subdirectory(src)
 add_subdirectory(test)
