--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,4 @@
 file(GLOB source CONFIGURE_DEPENDS *.cpp)
-
 add_executable(slogTest ${source})
-target_link_libraries(slogTest PUBLIC slog ${JOURNALD_LIBRARIES})
+target_link_libraries(slogTest PUBLIC slog)
 
