--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.12)
-project(slog VERSION 1.2.0.0)
+project(slog VERSION 1.3.0.0)
 
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -9,11 +9,19 @@ set(SLOG_DEFAULT_RECORD_SIZE 512 CACHE STRING "Size in bytes of default record")
 set(SLOG_DEFAULT_POOL_RECORD_COUNT 2048 CACHE STRING "Number of records to allocate")
 
 add_subdirectory(src)
-add_subdirectory(test)
-add_subdirectory(example)
-add_subdirectory(benchmark)
 
-set_target_properties(slogTest slogMinimal benchmark PROPERTIES EXCLUDE_FROM_ALL TRUE)
+option(SLOG_BUILD_TEST "Compile unit tests" OFF)
+option(SLOG_BUILD_EXAMPLE "Compile examples" OFF)
+option(SLOG_BUILD_BENCHMARK "Compile benchmarks" OFF)
+if (SLOG_BUILD_TEST)
+    add_subdirectory(test)
+endif()
+if (SLOG_BUILD_EXAMPLE)
+    add_subdirectory(example)
+endif()
+if(SLOG_BUILD_BENCHMARK)
+    add_subdirectory(benchmark)
+endif()
 
 install(TARGETS slog
     EXPORT SlogTargets
