--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 option(SLOG_LOG_TO_CONSOLE_WHEN_STOPPED "When slog is stopped, write all messages to the console" OFF)
 option(SLOG_STREAM "Provide Slog() macros and include <iostream>" ON)
+option(SLOG_BINARY_LOG "Provide Blog() binary data logging macros" OFF)
+option(SLOG_JOURNALD "Provide journald sink (requires systemd-dev to be installed)" ON)
 set(SLOG_DEFAULT_RECORD_SIZE 512 CACHE STRING "Size in bytes of default record")
 set(SLOG_DEFAULT_POOL_RECORD_COUNT 2048 CACHE STRING "Number of records to allocate")
 
