--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,3 +8,5 @@ endif()
 add_executable(slogTest ${source})
 target_link_libraries(slogTest PUBLIC slog)
 
+add_subdirectory(signalTest)
+add_subdirectory(exitTest)
