--- a/src/slog/LogConfig.hpp.in
+++ b/src/slog/LogConfig.hpp.in
@@ -7,6 +7,7 @@
 #cmakedefine01 SLOG_LOG_TO_CONSOLE_WHEN_STOPPED
 #cmakedefine01 SLOG_STREAM
 #cmakedefine01 SLOG_BINARY_LOG
+#cmakedefine01 SLOG_PRINT_ERROR
 
 namespace slog {
 
