Avoid pointer math & placement new in the record pool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,10 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 option(SLOG_STREAM "Provide Slog() macros and include <iostream>" ON)
 option(SLOG_BINARY_LOG "Provide Blog() binary data logging macros" OFF)
 option(SLOG_JOURNALD "Provide journald sink (requires systemd-dev to be installed)" ON)
+option(SLOG_LOG_TO_CONSOLE_WHEN_STOPPED "When slog is stopped, print messages to the console instead of suppressing them" OFF)
 option(SLOG_PRINT_ERROR "Print internal errors to stderr" ON)
 set(SLOG_DEFAULT_RECORD_SIZE 512 CACHE STRING "Size in bytes of default record")
-set(SLOG_DEFAULT_POOL_RECORD_COUNT 2048 CACHE STRING "Number of records to allocate")
+set(SLOG_DEFAULT_POOL_RECORD_COUNT 256 CACHE STRING "Number of records to allocate")
 
 add_subdirectory(src)
 
