Use RecordInserter to unify binary and stream writing to LogRecord

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,9 +1,8 @@
-if (NOT SLOG_JOURNALD)
-    message(WARNING "Slog benchmark requires SLOG_JOURNALD")
-else()
+if (SLOG_JOURNALD)
     file(GLOB source CONFIGURE_DEPENDS *.cpp)
     add_compile_options(-pg)
-
-    add_executable(slogBenchmark ${source})
-    target_link_libraries(slogBenchmark PUBLIC slog ${JOURNALD_LIBRARIES})
+    add_executable(slogBenchmark bench.cpp)
+    target_link_libraries(slogBenchmark PUBLIC slog)
+else()
+    message(STATUS "Benchmark requires journald")
 endif()
