--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -19,11 +19,12 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install Journald headers
-      run: sudo apt-get update
-      run: sudo apt-get install libsystemd-dev
+      run: | 
+        sudo apt-get update
+        sudo apt-get install libsystemd-dev
 
     - name: Configure CMake      
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DSLOG_BUILD_TEST=ON -DSLOG_FORMAT_LOG=ON -DSLOG_BINARY_LOG=ON -DSLOG_JOURNALD
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DSLOG_BUILD_TEST=ON -DSLOG_FORMAT_LOG=ON -DSLOG_BINARY_LOG=ON -DSLOG_JOURNALD=ON
 
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
