--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -1,6 +1,4 @@
-# This starter workflow is for a CMake project running on a single platform. There is a different starter workflow if you need cross-platform coverage.
-# See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-multi-platform.yml
-name: CMake on a single platform
+name: Slog tests
 
 on:
   push:
@@ -32,4 +30,3 @@ jobs:
     - name: Test
       working-directory: ${{github.workspace}}/build
       run: ./test/slogTest
-
