Fix install and cmake config script

--- a/cmake/SlogConfig.cmake.in
+++ b/cmake/SlogConfig.cmake.in
@@ -2,6 +2,8 @@ set(SLOG_VERSION @PACKAGE_VERSION@)
 @PACKAGE_INIT@
 set_and_check(SLOG_INCLUDE_DIR "@PACKAGE_SLOG_INCLUDE_INSTALL_DIR@")
 set_and_check(SLOG_LIB_DIR "@PACKAGE_SLOG_LIB_INSTALL_DIR@")
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}")
+message("!!! Set CMAKE_MODULE_PATH to ${CMAKE_MODULE_PATH}")
 if (@SLOG_JOURNALD@)
     find_package(Journald REQUIRED)
 endif()
