Change config name to not clash with other config.hpp's in the include path

--- a/src/slog/CMakeLists.txt
+++ b/src/slog/CMakeLists.txt
@@ -1,4 +1,4 @@
-configure_file(config.hpp.in config.hpp)
+configure_file(SlogConfig.hpp.in SlogConfig.hpp)
 
 set(SLOG_SOURCE
     BinarySink.cpp    
